@@ -6,6 +6,7 @@
 -add sprite group alias.
 -revise surface setpixel.
 -revise color arg processing.
+-refactor sprite collide methods.
 
 0.24    2021-04-28
 -revise rect move/inflate args processing.
